# tasking_backend

./: Cargo.toml  Dockerfile  LICENSE  README.md  TestingGuide.md  docker-compose.yml  dot_marketplace-milestone_1.md  dot_marketplace-milestone_2.md  dot_marketplace-milestone_3.md
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/chat/: Cargo.toml
pallets/chat/src/: lib.rs  tests.rs
pallets/pallet-chat/: Cargo.toml
pallets/pallet-chat/src/: lib.rs
pallets/pallet-court/: Cargo.toml  README.md
pallets/pallet-court/src/: lib.rs  mock.rs  tests.rs
pallets/pallet-tasking/: Cargo.toml  taskingreadme.md
pallets/pallet-tasking-v2/: Cargo.toml
pallets/pallet-tasking/rpc/: Cargo.toml
pallets/pallet-tasking/rpc/src/: lib.rs
pallets/pallet-tasking/runtime-api/: Cargo.toml
pallets/pallet-tasking/runtime-api/src/: lib.rs
pallets/pallet-tasking/src/: dot_shuffle.rs  lib.rs  mock.rs  shuffle.rs  tests.rs  types.json  utils.rs
pallets/pallet-tasking/src/utils/: mod.rs  rating_util.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/api-runtime/: Cargo.toml
runtime/api-runtime/src/: lib.rs
runtime/src/: lib.rs
