[package]
name = "pallet-tasking-rpc"
version = "3.0.0"
edition = "2018"
authors = ['']
description = "Runtime RPC for pallet tasking"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
serde = { version = "1.0", features = ["derive"], optional = true }

# Substrate packages

sp-api = { version = '3.0.0', default-features = false}
sp-blockchain = { version = '3.0.0', default-features = false}
sp-rpc = { version = '3.0.0', default-features = false}
sp-runtime = { version = '3.0.0', default-features = false}

# local packages
pallet-tasking-runtime-api = { version = "3.0.0", path = "../runtime-api", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "sp-api/std",
  "sp-runtime/std",
  "pallet-tasking-runtime-api/std"
]