[package]
name = "pallet-tasking-runtime-api"
version = '3.0.0'
authors = [""]
edition = "2018"
description = 'Runtime API for pallet tasking'
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[features]
default = ["std"]
std = [
    'codec/std',
    "sp-api/std",
]
